fix logo on small iphones

--- a/css/style.css
+++ b/css/style.css
@@ -590,6 +590,12 @@ header .adi-banner-container .newsletter input {
   width: 100%;
   height: 54%;
 }
+/* Phones */
+@media only screen and (max-width: 480px) {
+  header .adi-banner-container .logo {
+    max-height: 30%;
+  }
+}
 /* Short Desktop Screens*/
 @media only screen and (max-height: 500px) and (min-width: 481px) {
   /* Squeeze everything into the banner */
