--- a/less/header.less
+++ b/less/header.less
@@ -58,6 +58,14 @@ header {
   height: 54%;
 }
 
+/* Phones */
+@media only screen and (max-width: 480px) {
+  header .adi-banner-container .logo {
+    max-height: 30%;
+  }
+}
+
+
 /* Short Desktop Screens*/
 @media only screen and (max-height: 500px) and (min-width: 481px){
   /* Squeeze everything into the banner */
